# cmake-examples

01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/src/: main.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/F-build-type/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt
01-basic/H-third-party-library/: CMakeLists.txt  main.cpp
01-basic/I-compiling-with-clang/: pre_test.sh  run_test.sh
01-basic/J-building-with-ninja/: run_test.sh
01-basic/L-cpp-standard/i-common-method/: CMakeLists.txt
01-basic/L-cpp-standard/ii-cxx-standard/: CMakeLists.txt
01-basic/L-cpp-standard/iii-compile-features/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary1/: CMakeLists.txt
03-code-generation/configure-files/: CMakeLists.txt
03-code-generation/protobuf/: CMakeLists.txt
